@@ -1,3 +1,13 @@
+2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Cumberland.TilePyramidGenerator/AssemblyInfo.cs,
+	  Cumberland.DrawMap/AssemblyInfo.cs,
+	  Cumberland.Data.SqlServer/AssemblyInfo.cs,
+	  Cumberland.Data.SqlServer/SqlServerFeatureSource.cs,
+	  Cumberland.Data.PostGIS/AssemblyInfo.cs,
+	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs,
+	  Cumberland.Data.SqlServer.Loader/AssemblyInfo.cs: cleanup
+
 2008-11-09  Scott Ellington <scott.ellington@gmail.com> 
 
 	* Cumberland.Data.SqlServer/SqlServerFeatureSource.cs,
